# nextmeeting

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  Cargo.toml  DESIGN.md  Makefile  README.md  REVIEW.md  config.example.toml  nextmeeting  pyproject.toml
.github/workflows/: ci.yml  precommit.yml  ruff.yml
crates/nextmeeting-client/: Cargo.toml
crates/nextmeeting-client/src/: actions.rs  cli.rs  config.rs  error.rs  lib.rs  main.rs  secret.rs  socket.rs
crates/nextmeeting-client/src/commands/: auth.rs  config.rs  mod.rs  server.rs
crates/nextmeeting-core/: Cargo.toml
crates/nextmeeting-core/src/: event.rs  format.rs  lib.rs  links.rs  time.rs  tracing.rs
crates/nextmeeting-core/src/format/: golden_tests.rs  mod.rs
crates/nextmeeting-core/src/format/snapshots/: nextmeeting_core__format__golden_tests__json_empty.snap  nextmeeting_core__format__golden_tests__json_multiple.snap  nextmeeting_core__format__golden_tests__json_ongoing.snap  nextmeeting_core__format__golden_tests__json_single_upcoming.snap  nextmeeting_core__format__golden_tests__polybar_all_day_only.snap  nextmeeting_core__format__golden_tests__polybar_empty.snap  nextmeeting_core__format__golden_tests__polybar_ongoing.snap  nextmeeting_core__format__golden_tests__polybar_prefers_timed.snap  nextmeeting_core__format__golden_tests__polybar_single_upcoming.snap  nextmeeting_core__format__golden_tests__tty_absolute_time.snap  nextmeeting_core__format__golden_tests__tty_all_day.snap  nextmeeting_core__format__golden_tests__tty_custom_format.snap  nextmeeting_core__format__golden_tests__tty_custom_format_all_placeholders.snap  nextmeeting_core__format__golden_tests__tty_custom_separator.snap  nextmeeting_core__format__golden_tests__tty_empty.snap  nextmeeting_core__format__golden_tests__tty_hours_away.snap  nextmeeting_core__format__golden_tests__tty_multiple_meetings.snap  nextmeeting_core__format__golden_tests__tty_one_hour.snap  nextmeeting_core__format__golden_tests__tty_ongoing.snap  nextmeeting_core__format__golden_tests__tty_privacy_custom_title.snap  nextmeeting_core__format__golden_tests__tty_privacy_mode.snap  nextmeeting_core__format__golden_tests__tty_single_upcoming.snap  nextmeeting_core__format__golden_tests__tty_soon_meeting.snap  nextmeeting_core__format__golden_tests__tty_special_characters.snap  nextmeeting_core__format__golden_tests__tty_starting_now.snap  nextmeeting_core__format__golden_tests__tty_time_format_12h.snap  nextmeeting_core__format__golden_tests__tty_title_truncation.snap  nextmeeting_core__format__golden_tests__tty_until_offset_beyond.snap  nextmeeting_core__format__golden_tests__tty_until_offset_within.snap  nextmeeting_core__format__golden_tests__waybar_all_day_only.snap  nextmeeting_core__format__golden_tests__waybar_empty.snap  nextmeeting_core__format__golden_tests__waybar_ending_soon.snap  nextmeeting_core__format__golden_tests__waybar_hide_all_day.snap  nextmeeting_core__format__golden_tests__waybar_mixed_meetings.snap  nextmeeting_core__format__golden_tests__waybar_ongoing.snap  nextmeeting_core__format__golden_tests__waybar_privacy.snap  nextmeeting_core__format__golden_tests__waybar_single_upcoming.snap  nextmeeting_core__format__golden_tests__waybar_soon.snap  nextmeeting_core__format__golden_tests__waybar_soon_with_colors.snap  nextmeeting_core__format__golden_tests__waybar_tooltip_limit.snap
crates/nextmeeting-gtk4/: Cargo.toml  build.rs
crates/nextmeeting-gtk4/blueprints/: timeline.blp  window.blp
crates/nextmeeting-gtk4/resources/: nextmeeting.gresource.xml  style.css
crates/nextmeeting-gtk4/src/: application.rs  config.rs  dismissals.rs  lib.rs  main.rs  utils.rs  window_state.rs
crates/nextmeeting-gtk4/src/actions/: handlers.rs
crates/nextmeeting-gtk4/src/daemon/: client.rs  state.rs
crates/nextmeeting-gtk4/src/tray/: manager.rs  mod.rs  sni.rs
crates/nextmeeting-gtk4/src/widgets/: analog_clock.rs  detail_panel.rs  meeting_card.rs  meeting_row.rs  mod.rs  status_indicator.rs  timeline.rs  window.rs
crates/nextmeeting-protocol/: Cargo.toml
crates/nextmeeting-protocol/src/: error.rs  framing.rs  lib.rs  types.rs
crates/nextmeeting-providers/: Cargo.toml
crates/nextmeeting-providers/src/: error.rs  lib.rs  normalize.rs  provider.rs  raw_event.rs
crates/nextmeeting-providers/src/caldav/: auth.rs  client.rs  config.rs  ics.rs  mod.rs  provider.rs  xml.rs
crates/nextmeeting-providers/src/google/: client.rs  config.rs  mod.rs  oauth.rs  provider.rs  tokens.rs
crates/nextmeeting-server/: Cargo.toml
crates/nextmeeting-server/src/: cache.rs  config.rs  error.rs  handler.rs  lib.rs  notify.rs  pidfile.rs  scheduler.rs  signals.rs  socket.rs
crates/nextmeeting-tauri/: Cargo.toml  tauri.conf.json
crates/nextmeeting-tauri/icons/: icon-menubar-32.rgba  icon-menubar-tight-18.rgba
crates/nextmeeting-tauri/src/: dismissals.rs  main.rs
crates/nextmeeting-tauri/ui/: app-core.js  app.js  index.html  package-lock.json  package.json  styles.css  vitest.config.mjs
crates/nextmeeting-tauri/ui/tests/: app-core.test.js
hack/radicale/: config.ini  populate.py  start.sh
nextmeeting/: cli.py
old/: README.md
old/nextmeeting/: __init__.py  cli.py
old/tests/: test_features.py  test_links.py
packaging/: flake.nix  make-release.sh  package.nix
packaging/aur/: PKGBUILD  build.sh
packaging/systemd/: nextmeetingd.service
src/nextmeeting/: __init__.py  caldav.py  cli.py  client.py  core.py  formatting.py  meeting_services.py  protocol.py  server.py
systemd/: nextmeeting.service
tests/: test_caldav_fetcher.py  test_cli.py  test_config_loading.py  test_core.py  test_features.py  test_formatting.py  test_gcalcli_parsing.py  test_links.py  test_links_minimal.py  test_meeting_services.py  test_multi_calendar.py  test_protocol.py  test_server_client.py  test_subscribe.py
tmp/: GTK4_MIGRATION_JOURNEY.md  REWRITE_PLANS.md  python-nextmeeting.xml
