[workspace]
resolver = "2"
members = [
    "crates/nextmeeting-core",
    "crates/nextmeeting-protocol",
    "crates/nextmeeting-providers",
    "crates/nextmeeting-server",
    "crates/nextmeeting-client",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/chmouel/nextmeeting"

[workspace.dependencies]
chrono = { version = "0.4", features = ["serde"] }
regex = "1.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
url = "2.5"
urlencoding = "2.1"

# dev dependencies
insta = { version = "1.42", features = ["json", "redactions"] }
