[workspace]
resolver = "2"
members = [
    "crates/nextmeeting-core",
    "crates/nextmeeting-protocol",
    "crates/nextmeeting-providers",
    "crates/nextmeeting-server",
    "crates/nextmeeting-client",
    "crates/nextmeeting-tauri",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/chmouel/nextmeeting"

[workspace.dependencies]
chrono = { version = "0.4", features = ["serde"] }
notify-rust = "4.11"
regex = "1.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1.43", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
url = "2.5"
urlencoding = "2.1"

# dev dependencies
insta = { version = "1.42", features = ["json", "redactions"] }
tempfile = "3.18"
