[tool.poetry]
name = "nextmeeting"
version = "1.5.1"
description = "Show your nextmeeting in your poly/waybar with gcalcli"
authors = ["Chmouel Boudjnah <chmouel@chmouel.com>"]
keywords = ["calendar", "cli"]
readme = "README.md"
license = "Apache-2.0"
homepage = "https://github.com/chmouel/nextmeeting"
repository = "https://github.com/chmouel/nextmeeting"
include = ["LICENSE"]
classifiers = ["License :: OSI Approved :: Apache Software License"]

[tool.poetry.dependencies]
python = "^3.9"
python-dateutil = "^2.8.2"

[tool.poetry.scripts]
nextmeeting = "nextmeeting.cli:main"

[tool.poetry.group.dev.dependencies]
ruff = "^0.0.291"
mypy = "^0.920"

[tool.ruff.lint]
ignore = ["E501", "PLR0912"]
select = ["E", "F", "D4", "PT", "PL"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
