[package]
name = "nextmeeting-client"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "CLI, socket client, output rendering, actions"

[[bin]]
name = "nextmeeting"
path = "src/main.rs"

[features]
default = ["google"]
google = ["nextmeeting-providers/google"]

[dependencies]
nextmeeting-core = { path = "../nextmeeting-core" }
nextmeeting-providers = { path = "../nextmeeting-providers", default-features = false }

chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

clap = { version = "4", features = ["derive", "env"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
toml = "0.8"
dirs = "5"
