[package]
name = "nextmeeting-client"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "CLI, socket client, output rendering, actions"

[[bin]]
name = "nextmeeting"
path = "src/main.rs"

[features]
default = ["google"]
google = ["nextmeeting-providers/google"]

[dependencies]
nextmeeting-core = { path = "../nextmeeting-core" }
nextmeeting-protocol = { path = "../nextmeeting-protocol" }
nextmeeting-providers = { path = "../nextmeeting-providers", default-features = false }
nextmeeting-server = { path = "../nextmeeting-server" }

chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

clap = { version = "4", features = ["derive", "env"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util", "time", "process"] }
toml = "0.8"
toml_edit = "0.22"
dirs = "5"
uuid = { version = "1", features = ["v4"] }
open = "5"
arboard = "3"

[dev-dependencies]
tempfile.workspace = true

[target.'cfg(unix)'.dependencies]
libc = "0.2"
