[package]
name = "nextmeeting-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core types: time, events, links, filters, formatting"

[dependencies]
chrono.workspace = true
regex.workspace = true
serde.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
url.workspace = true
urlencoding.workspace = true

[dev-dependencies]
serde_json.workspace = true
insta.workspace = true
