[package]
name = "nextmeeting-providers"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "CalendarProvider trait and implementations (Google, CalDAV)"

[dependencies]
nextmeeting-core = { path = "../nextmeeting-core" }
chrono.workspace = true
serde.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
serde_json.workspace = true
tokio = { version = "1", features = ["rt", "macros"] }
