[package]
name = "nextmeeting-providers"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "CalendarProvider trait and implementations (Google, CalDAV)"

[features]
default = ["caldav"]
caldav = ["dep:reqwest", "dep:icalendar", "dep:md5", "dep:base64", "dep:rand", "dep:quick-xml", "dep:tokio"]
google = ["dep:reqwest", "dep:base64", "dep:rand", "dep:sha2", "dep:open", "dep:dirs", "dep:tokio"]

[dependencies]
nextmeeting-core = { path = "../nextmeeting-core" }
chrono.workspace = true
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
url.workspace = true
urlencoding.workspace = true

# CalDAV dependencies (optional)
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "charset", "http2"], optional = true }
icalendar = { version = "0.16", optional = true }
md5 = { version = "0.7", optional = true }
base64 = { version = "0.22", optional = true }
rand = { version = "0.9", optional = true }
quick-xml = { version = "0.37", features = ["serialize"], optional = true }
tokio = { version = "1", features = ["sync"], optional = true }

# Google dependencies (optional)
sha2 = { version = "0.10", optional = true }
open = { version = "5", optional = true }
dirs = { version = "5", optional = true }

[dev-dependencies]
serde_json.workspace = true
tokio = { version = "1", features = ["rt", "macros"] }
