[package]
name = "nextmeeting-tauri"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Tauri desktop GUI for nextmeeting"

[[bin]]
name = "nextmeeting-gui"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
nextmeeting-client = { path = "../nextmeeting-client" }
nextmeeting-core = { path = "../nextmeeting-core" }
nextmeeting-protocol = { path = "../nextmeeting-protocol" }
nextmeeting-server = { path = "../nextmeeting-server" }

chrono.workspace = true
serde.workspace = true
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-window-state = "2"
open = "5"
libc = "0.2"
tokio.workspace = true
